# winagent

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_winagent.py  winagent.spec
.github/workflows/: build.yml
scripts/: smoke_test_exe.py
tests/: conftest.py  fakes.py  test_app_entry.py  test_coding_schema.py  test_coding_tools.py  test_executor.py  test_gemini_client.py  test_llm_factory.py  test_memory.py  test_openai_compat_client.py  test_orchestrator.py  test_prompts.py  test_safety.py  test_safety_policy.py  test_schema.py  test_streaming.py  test_ui_smoke.py  test_user_config.py
winagent/: __init__.py  __main__.py  app.py  coding_tools.py  config.py  executor.py  gemini_client.py  llm_base.py  logger.py  memory.py  openai_compat_client.py  orchestrator.py  prompts.py  safety.py  schema.py  ui.py  user_config.py  vision.py
